# test_package_setuptools_B

./: .gitignore  main.py  pyproject.toml  requirements.txt
